parslers-benchmark/src/tests/invalid/semanticErr/variables/basicTypeErr02.wacc
# type mismatch: int <- char

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int i = 'f'
end
